examples/type_system/failing/58_strict_public_underscore_missing_annotation.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// `_` prefix does not make a function private in strict mode.

public fn _foo(x) -> Int {
    x
}

fn main() -> Unit {
}
